--- a/.gitignore
+++ b/.gitignore
@@ -457,3 +457,5 @@ $RECYCLE.BIN/
 ## CZ.Azure.FileExchange
 temp/*
 **/wwwroot/client/
+### remove all css files from git, because we use scss
+*.css
