--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true
+      - name: Setup nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: 'src/CZ.Azure.FileExchange/package.json'
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.9.0
         with:
-          # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x
-          dotnet-version: 7.0.x
-      - name: Restore dependencies
+          global-json-file: global.json
+      - name: Restore client node dependencies
+        run: npm ci --no-fund
+        working-directory: src/CZ.Azure.FileExchange
+      - name: Restore dotnet dependencies
         run: dotnet restore
       - name: Build
         run: dotnet build -c Release --no-restore
