--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,10 @@ stages:
       inputs:
         packageType: 'sdk'
         version: '7.x'
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '6.x'
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
