--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
       inputs:
         command: 'publish'
         projects: $(workingDirectory)/src/CZ.Azure.FileExchange.Api/CZ.Azure.FileExchange.Api.csproj
-        arguments: --output $(workingDirectory)/api --configuration Release
+        arguments: --output $(workingDirectory)/api --configuration Release --runtime win-x86 --no-self-contained
         zipAfterPublish: false
         workingDirectory: $(workingDirectory)/src/CZ.Azure.FileExchange.Api/
         publishWebProjects: false
