Update frontend to dotnet7 part2 (#29)
* update packages and framework

* update global json

* update pipelines

* only update dependcies.

* try to fix the pipelines for our special build setup

* try to migrate the functions too to dotnet 7

* try to allow dotnet 7

* add deploy.ps1 to the solution

* try to use dotnet 7 in the deployment

* try to fix the deployment

* try to fix deployment

* fix the deployment

* additional logging, if the deployment failed

* fix functions startup

* try to fix the deploy script a bit more

* try to fix deployment again

* change settings files

* update packages

* try with a diffrent framework identifier

* try it with the old version again

* try to build self contained

* try to fix pipeline

* fix pipeline again

* fix a minor issue in the custom deploy script

* try to use the latest and greatest worker updates

* try now with x86. Maybe it will fix it

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,10 @@ stages:
     - task: UseDotNet@2
       inputs:
         packageType: 'sdk'
+        version: '7.x'
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
         version: '6.x'
     - task: DotNetCoreCLI@2
       displayName: Build
@@ -50,7 +54,7 @@ stages:
       inputs:
         command: 'publish'
         projects: $(workingDirectory)/src/CZ.Azure.FileExchange.Api/CZ.Azure.FileExchange.Api.csproj
-        arguments: --output $(workingDirectory)/api --configuration Release
+        arguments: --output $(workingDirectory)/api --configuration Release --runtime win-x86 --no-self-contained
         zipAfterPublish: false
         workingDirectory: $(workingDirectory)/src/CZ.Azure.FileExchange.Api/
         publishWebProjects: false
