add deploy.ps1 to the github release

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,6 +109,7 @@ stages:
               assets: |
                 $(Pipeline.Workspace)/drop/*.zip
                 $(Pipeline.Workspace)/drop/azuredeploy.json
+                $(Pipeline.Workspace)/drop/deploy.ps1
               repositoryName: $(Build.Repository.Name)
               assetUploadMode: replace
               title: $(Build.BuildNumber)
