--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
     if: (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: windows-latest
     environment: 'Azure Infra'
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     name: Build and Deploy Job
     steps:
       - uses: actions/checkout@v2
