--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: windows-latest
     environment: 'Azure Infra'
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
     name: Build and Deploy Job
