--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     if: (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Restore dependencies
         run: dotnet restore
       - name: Publish Frontend
