--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Restore dependencies
-        run: dotnet restore
       - name: Publish Frontend
-        run: dotnet publish -c Release ./src/CZ.Azure.FileExchange/ -o temp/frontend --no-restore
+        run: dotnet publish -c Release ./src/CZ.Azure.FileExchange/ -o temp/frontend
       - name: Publish API
-        run: dotnet publish -c Release ./src/CZ.Azure.FileExchange.Api/ -o temp/api --runtime win-x86 --no-self-contained --no-restore
+        run: dotnet publish -c Release ./src/CZ.Azure.FileExchange.Api/ -o temp/api --runtime win-x86 --no-self-contained
       - name: zip outputs
         shell: pwsh
         run: |
